// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.posedio.roombooking.proto.guests";
option java_outer_classname = "GuestsProto";
option objc_class_prefix = "HLW";

package com.posedio.roombooking.proto;

service Guests {
  rpc fetchGuests (google.protobuf.Empty) returns (GuestsReply) {}
}

message GuestsRequest {
}

message GuestsReply {
  repeated GuestReply guests = 1;
}

message GuestReply {
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string address = 5;
}